# vettd-cli

./: .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES  agents.md  scanner-data-contract.json
.github/: CODEOWNERS
crates/vettd-cli/: Cargo.toml
crates/vettd-cli/src/: capabilities.rs  cli.rs  content_patterns.rs  contract_sync.rs  directory.rs  discovery.rs  formatters.rs  identity.rs  lite_mode.rs  main.rs  models.rs  network.rs  network_evidence.rs  output.rs  payload.rs  progress.rs  read_client.rs  risk_engine.rs  rule_engine.rs  rules.rs  scan.rs  scan_cache.rs  scan_refresh.rs  scoring.rs  semver.rs  setup.rs  source_analysis.rs  source_patterns.rs  submit.rs  updater.rs  verifier.rs  wizard.rs
crates/vettd-cli/src/contract/: agents.rs  apps.rs  helpers.rs  mcp.rs  mod.rs  prompts.rs  skill_scan.rs  skills.rs  types.rs
crates/vettd-cli/src/detectors/: base.rs  browser_footprints.rs  containers.rs  custom_rules.rs  mcp_configs.rs  mod.rs  source_risks.rs
crates/vettd-cli/tests/: stub_commands.rs
crates/vettd-cli/tests/fixtures/docker/colocated-agent-project/: Dockerfile  agents.md
crates/vettd-cli/tests/fixtures/docker/direct-agentic-compose/: docker-compose.yml
crates/vettd-skill-scanner/: Cargo.toml
crates/vettd-skill-scanner/src/: chain.rs  consts.rs  engine.rs  finding.rs  lib.rs  result.rs  rules.rs  scanner.rs
crates/vettd-skill-scanner/src/checks/: behavioral.rs  chains.rs  description.rs  encoding.rs  mod.rs  sensitive.rs  typosquat.rs
crates/vettd-skill-scanner/src/skill_md/: body.rs  mod.rs  validate.rs
crates/vettd-skill-scanner/tests/: pipeline.rs  scan_skill.rs
docs/: architecture.md  c4-level1-context.md  c4-level2-container.md  c4-level3-component.md  c4-level4-code.md  cisco-source-analysis-plan.md  detectors.md  (+8 more)
(+18 files in other folders)
