[workspace]
resolver = "2"
members = [
    "crates/vettd-cli",
    "crates/vettd-skill-scanner",
]
exclude = []

[workspace.package]
version = "0.7.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
