[package]
name = "vettd-cli"
version.workspace = true
edition.workspace = true
publish = false
license = "MIT"
description = "AI Execution Inventory — detect, analyze, and report AI execution artifacts."

[[bin]]
name = "vettd"
path = "src/main.rs"

[[bin]]
name = "parity-adapter"
path = "src/bin/parity_adapter.rs"

[dependencies]
vettd-skill-scanner = { path = "../vettd-skill-scanner" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
dirs = "6"
crossterm = "0.29"
hostname = "0.4"
ureq = { version = "3", features = ["json"] }
flate2 = "1"
tar = "0.4"
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8"] }
base64 = "0.22"
rusqlite = { version = "0.39", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
dispatch2 = "0.3"
fsevent-sys = "5.2"

[dev-dependencies]
tempfile = "3"
